app/assets/styles/main.scss
@import "_reset.scss";
@import "_breakpoints.scss";

:root {
  font-family: "Inter", sans-serif;
  font-weight: var(--font-weight-normal);
}
@supports (font-variation-settings: normal) {
  :root {
    font-family: "InterVariable", sans-serif;
    font-optical-sizing: auto;
  }
}

:root {
  --color-blue: 13, 121, 242;

  --bg-primary: #0d79f2;
  --bg-secondary: #feddc1;
  --bg-secondary-light: #fef3ea;
  --bg-body: var(--bg-secondary);

  --fg-primary: #feddc1;

  --text-primary: #feddc1;
  --text-secondary: #0d79f2;

  --font-size-sm: 0.9rem;
  --font-size-md: 1rem;
  --font-size-lg: 1.125rem;

  --max-text-width: 40rem;

  --spacing-1: 0.25rem;
  --spacing-2: 0.5rem;
  --spacing-3: 0.75rem;
  --spacing-4: 1rem;
  --spacing-5: 1.25rem;
  --spacing-6: 1.5rem;
  --spacing-7: 1.75rem;
  --spacing-8: 2rem;

  --fluid-spacing-4: clamp(0.5rem, 2vw, 1rem);
  --fluid-spacing-8: clamp(1rem, 4.5vw, 2rem);
  --fluid-spacing-12: clamp(1.5rem, 6vw, 4rem);

  --container-sm: #{$breakpoint-sm};
  --container-md: #{$breakpoint-md};

  --fluid-container-sm: clamp(
    #{$breakpoint-sm},
    calc(#{$breakpoint-sm * 0.93} + 7vw),
    #{$breakpoint-sm * 2}
  );

  /**
   * Theme
   */
  --background-neutral: #f6f6f6;
  --background-success: #f2f2d9;
  --background-error: #ffe8e5;

  --border-neutral: #ccc;

  --font-weight-normal: 300;
  --font-weight-semibold: 500;
  --font-weight-bold: 700;
  --font-weight-black: 900;

  --body-bg-color: #feddc1;
  --body-text-color: #082342; // #041a33;
  --body-text-color-light: #837e7b;

  --body-font-md: 1rem;
  --body-font-sm: 0.897rem;

  --header-bg-color: #0d79f2;
  --header-text-color: #fee8d5;

  --footer-bg-color: #ffe7d3;
  --footer-text-color: #404d5d;

  --button-primary-bg-color: #0d79f2;
  --button-primary-text-color: #fee8d5;
  --button-secondary-bg-color: #fef3ea;
  --button-secondary-text-color: var(--body-text-color);

  --input-border-radius: 5px;
  --input-border-color: #ccc;
  --input-background-color: rgba(255, 255, 255, 0.5);
  --input-focus-outline-width: 4px;
  --input-focus-outline-color: rgba(var(--color-blue), 0.15);
  --input-focus-border-color: rgb(var(--color-blue));
  --input-disabled-background-color: #f8f8f8;

  --navbar-height: 4rem;
}

body {
  background-color: var(--body-bg-color);
  margin: 0;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  color: var(--body-text-color);
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
ul {
  margin-bottom: 1rem;
}
h2,
h3,
h4,
h5,
h6 {
  font-weight: var(--font-weight-bold);
}
h1 {
  font-size: 2rem;
  font-weight: var(--font-weight-black);
}
h2 {
  font-size: 1.5rem;
}

a {
  color: var(--text-secondary);
}

strong {
  font-weight: var(--font-weight-bold);
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

input,
button,
textarea,
select {
  font: inherit;
}

.rich-text p:last-child {
  margin-bottom: 0;
}

hr {
  width: 4rem;
  height: 3px;
  border-radius: 3px;
  margin: var(--spacing-8) 0;
  border: 0;
  background-color: var(--bg-primary);
}

// Hide custom element (shoelace elements) until
// they have been loaded
:not(:defined) {
  visibility: hidden;
}

.hidden {
  display: none;
}

@media screen and (min-width: $breakpoint-sm) {
  .sm\:hidden {
    display: none;
  }
  .sm\:block {
    display: block;
  }
}
@media screen and (min-width: $breakpoint-md) {
  .md\:hidden {
    display: none;
  }
  .md\:block {
    display: block;
  }
}

.lb-input {
  display: block;
  width: 100%;
  line-height: 2;
  padding: 0 var(--spacing-2);
  border: 1px solid var(--input-border-color);
  border-radius: var(--input-border-radius);
  padding: var(--spacing-1) var(--spacing-3);
  background-color: var(--input-background-color);
}
.lb-input:focus {
  outline: var(--input-focus-outline-width) solid
    var(--input-focus-outline-color);
  border: 1px solid var(--input-focus-border-color);
}
.lb-input[disabled] {
  background-color: var(--input-disabled-background-color);
}

